--- a/sample/src/nav-bar.html
+++ b/sample/src/nav-bar.html
@@ -50,6 +50,7 @@
  -->
             <li><a route-href="route: polar-charts">Polar charts</a></li>
             <li><a route-href="route: radar-charts">Radar charts</a></li>
+            <li><a route-href="route: range-charts">Range charts</a></li>
           </ul>
         </li>
 
