--- a/sample/src/samples/qrcode/api.html
+++ b/sample/src/samples/qrcode/api.html
@@ -1,36 +1,85 @@
 <template>
   <require from="./api.css"></require>
   <div id="example">
+
     <div class="demo-section k-content">
-      <div k-barcode="k-widget.two-way: barcode; k-value: 1234567; k-type: ean8; k-background: transparent"></div>
+      <div k-qrcode="k-widget.two-way: qrcode; k-size.bind: 200; k-value.bind = qrValue "></div>
     </div>
 
-    <div class="box wide">
+    <div class="box wide" id="qrConfig">
+      <div class="box-col">
+        <h4>Value</h4>
+        <ul class="options">
+            <li>
+                <textarea id="qrValue" class="k-textbox" data-bind="value: qrValue" rows="5" cols="20"></textarea>
+            </li>
+        </ul>
+      </div>
+
       <div class="box-col">
         <h4>Options</h4>
-        <ul class="options">
-          <li><input type="checkbox" checked.bind="showText"/><label for="text">Show Text </label></li>
-          <li><input type="checkbox" checked.bind="showChecksum"/><label for="checksum">Show Checksum</label></li>
-        </ul>
-      </div>
-      <div class="box-col">
-        <h4>Types</h4>
         <ul class="options second-col">
-          <li>
-            <label for="type">Encoding:</label>
-            <k-drop-down-list k-data-source.bind="typesDataSource"
-                              k-on-change.delegate="setOptions()"
-                              k-value.two-way="type"
-                              k-data-text-field="type"
-                              k-data-value-field="type">
-            </k-drop-down-list>
-          </li>
-          <li>
-            <label for="value">Value:</label><input class="k-textbox" value.bind="value"/>
-            <span ref="validValue" show.bind="validValue.innerHTML" class="k-widget k-tooltip k-tooltip-validation k-invalid-msg"></span>
-          </li>
+            <li>
+                <label for="errorCorrection">Error correction level:</label>
+                <k-drop-down-list k-data-source.bind="errorCorrectionDataSource"
+                                  k-on-change.delegate="setOptions()"
+                                  k-value.two-way="errorCorrection"
+                                  k-data-text-field="errorCorrection"
+                                  k-data-value-field="errorCorrection"
+                </k-drop-down-list>
+            </li>
+
+            <li>
+              <label for="encoding">Encoding:</label>
+              <k-drop-down-list k-data-source.bind="encodingDataSource"
+                                k-on-change.delegate="setOptions()"
+                                k-value.two-way="encoding"
+                                k-data-text-field="encoding"
+                                k-data-value-field="encoding"
+                </k-drop-down-list>
+            </li>
+
+            <li>
+              <label for="size">Size:</label>
+              <input id="size" k-numerictextbox="k-value.bind: 120;
+                               k-format.bind: n0;
+                               k-min.bind: 60;
+                               k-max.bind: 200;
+                               k-step.bind: 10" />
+
+            </li>
+
+            <li>
+              <label for="borderWidth">Border width:</label>
+              <input id="borderWidth" k-numerictextbox="k-value.bind: 5;
+                                      k-format.bind: n0;
+                                      k-min.bind:0;
+                                      k-max.bind:20;
+                                      k-step.bind:1" />
+            </li>
         </ul>
       </div>
-    </div>
+
+      <div class="box-col">
+          <h4>Colors</h4>
+          <ul class="options">
+              <li>
+                <label for="bordercolor">Border color</label>
+                <input id="bordercolor" k-color-picker="k-value.two-way: borderColor" />
+              </li>
+
+              <li>
+               <label for="backgroundColor">Background color</label>
+                <input id="backgroundColor" k-color-picker="k-value.two-way: backgroundColor" />
+              </li>
+
+              <li>
+                <label for="moduleColor">Module color</label>
+                <input id="moduleColor" k-color-picker="k-value.two-way: moduleColor" />
+              </li>
+          </ul>
+      </div>
+
   </div>
+
 </template>
