--- a/sample/src/samples/qrcode/basic-use.html
+++ b/sample/src/samples/qrcode/basic-use.html
@@ -1,21 +1,25 @@
 <template>
   <require from="./basic-use.css"></require>
   <div id="example">
-      <div class="demo-section wide k-content">
-        <ul id="dairy">
-          <li>
-              <img src="http://demos.telerik.com/kendo-ui/content/shared/images/foods/200/12.jpg" alt="Queso Manchego La Pastora" />
-              <span k-barcode="k-value: 2346722; k-type: ean8; k-width.bind: 280; k-height.bind: 100"></span>
-          </li>
-          <li>
-              <img src="http://demos.telerik.com/kendo-ui/content/shared/images/foods/200/32.jpg" alt="Mascarpone Fabioli" />
-              <span k-barcode="k-value: Mascarpone; k-type: code128; k-width.bind: 280; k-height.bind: 100"></span>
-          </li>
-          <li>
-              <img src="http://demos.telerik.com/kendo-ui/content/shared/images/foods/200/72.jpg" alt="Gudbrandsdalsost" />
-              <span k-barcode="k-value: CHEESE; k-type: code39; k-width.bind: 280; k-height.bind: 100"></span>
-          </li>
-        </ul>
+      <div class="k-content">
+             <div class="qr-wrapper">
+                <div  class="demo-section">
+                    <h3>E-mail</h3>
+                    <div k-qrcode="k-size.bind: 120; k-value: mailto:clientservice@telerik.com; k-color: #e15613; k-background: transparent"></div>
+                </div>
+                <div class="demo-section">
+                    <h3>URL</h3>
+                    <div k-qrcode="k-value: //demos.telerik.com/kendo-ui/dataviz/overview/index.html; k-errorCorrection: M; k-size.bind: 120; k-border.bind: urlborder"></div>
+                </div>
+                <div class="demo-section">
+                    <h3>Telephone</h3>
+                    <div k-qrcode="k-value: tel:+1-888-365-2779; k-errorCorrection: Q; k-size.bind: 120; k-color: #67a814; k-border.bind: telephoneborder"></div>
+                </div>
+                <div  class="demo-section">
+                    <h3>Geo Location</h3>
+                    <div k-qrcode="k-value: geo:42.65049,23.37925,100; k-errorCorrection: H; k-size.bind: 120; k-color: #166a83"></div>
+                </div>
+            </div>
       </div>
   </div>
 </template>
