--- a/sample/src/samples/menu/animation-effects.html
+++ b/sample/src/samples/menu/animation-effects.html
@@ -1,2 +1,79 @@
 <template>
+  <div id="example">
+
+    <div class="demo-section k-content">
+      <ul id="menu" k-menu k-menu.ref="menuVM">
+        <li>
+          Furniture
+          <ul> <!-- moving the UL to the next line will cause an IE7 problem -->
+            <li>Tables &amp; Chairs</li>
+            <li>Sofas</li>
+            <li>Occasional Furniture</li>
+            <li>Childerns Furniture</li>
+            <li>Beds</li>
+          </ul>
+
+        </li>
+        <li>
+          Decor
+          <ul> <!-- moving the UL to the next line will cause an IE7 problem -->
+            <li>Bed Linen</li>
+            <li>Throws</li>
+            <li>Curtains &amp; Blinds</li>
+            <li>Rugs</li>
+            <li>Carpets</li>
+          </ul>
+        </li>
+        <li>
+          Storage
+          <ul> <!-- moving the UL to the next line will cause an IE7 problem -->
+            <li>Wall Shelving</li>
+            <li>Kids Storage</li>
+            <li>Baskets</li>
+            <li>Multimedia Storage</li>
+            <li>Floor Shelving</li>
+            <li>Toilet Roll Holders</li>
+            <li>Storage Jars</li>
+            <li>Drawers</li>
+            <li>Boxes</li>
+          </ul>
+
+        </li>
+        <li>
+          Lights
+          <ul> <!-- moving the UL to the next line will cause an IE7 problem -->
+            <li>Ceiling</li>
+            <li>Table</li>
+            <li>Floor</li>
+            <li>Shades</li>
+            <li>Wall Lights</li>
+            <li>Spotlights</li>
+            <li>Push Light</li>
+            <li>String Lights</li>
+          </ul>
+        </li>
+      </ul>
+    </div>
+
+    <div class="box">
+      <h4>Animation Settings</h4>
+      <ul class="options">
+        <li>
+          <input value="toggle" name="animation" type="radio" checked.bind="animation" /> <label for="toggle">toggle animation</label>
+        </li>
+        <li>
+          <input value="slideIn:down" name="animation" type="radio" checked.bind="animation" /> <label for="slide">slide animation</label>
+        </li>
+        <li>
+          <input value="expand:vertical" name="animation" type="radio" checked.bind="animation" /> <label for="expand">expand animation</label>
+        </li>
+        <li>
+          <input id="opacity" type="checkbox" checked.bind="opacity" /> <label for="opacity">animate opacity</label>
+        </li>
+        <li>
+          <input value.bind="delay" name="animation" type="text" class="k-textbox" /> <label for="delay">open/close delay</label>
+        </li>
+      </ul>
+    </div>
+  </div>
 </template>
