--- a/sample/src/samples/menu/api.html
+++ b/sample/src/samples/menu/api.html
@@ -1,2 +1,63 @@
 <template>
+  <require from="./api.css"></require>
+  <div id="example">
+
+    <div class="demo-section k-content wide">
+      <ul id="menu" ref="menuDiv" k-menu="k-data-source.bind: dataSource; k-widget.two-way: menu"></ul>
+    </div>
+
+    <div class="box wide">
+      <div class="box-col">
+        <h4>Enable / Disable</h4>
+        <ul class="options">
+          <li>
+            <input type="text" id="toggleIndex" class="k-textbox"/>
+            <button k-button click.delegate="toggleItem()">Enable/Disable</button>
+          </li>
+          <li>
+            <button k-button click.delegate="toggleTextItems()">Enable/Disable all Sub Item 3</button>
+          </li>
+          <li>
+            <button k-button click.delegate="toggleStrongItems()">Enable/Disable <strong>strong</strong> elements</button>
+          </li>
+          <li>
+            <button k-button click.delegate="toggleRedTextItems()">Enable/Disable <span class="redText">.redText</span> elements</button>
+          </li>
+        </ul>
+      </div>
+      <div class="box-col">
+        <h4>Add / Remove</h4>
+        <ul class="options">
+          <li>
+            <input type="text" id="removeIndex" class="k-textbox"/>
+            <button k-button click.delegate="removeItem()">Remove</button>
+          </li>
+          <li>
+            <input type="text" value="Item" id="appendText" class="k-textbox"/> <span class="append-position">under</span>
+            <input type="text" value="0.0" id="appendIndex" class="k-textbox"/>
+            <button k-button click.delegate="appendItem()">Append</button>
+          </li>
+          <li>
+            <input type="text" value="Item" id="beforeText" class="k-textbox"/> <span class="append-position">before</span>
+            <input type="text" value="0" id="beforeIndex" class="k-textbox"/>
+            <button k-button click.delegate="beforeItem()">Append</button>
+          </li>
+          <li>
+            <input type="text" value="Item" id="afterText" class="k-textbox"/> <span class="append-position">after</span>
+            <input type="text" value="0" id="afterIndex" class="k-textbox"/>
+            <button k-button click.delegate="afterItem()">Append</button>
+          </li>
+        </ul>
+      </div>
+      <div class="box-col">
+        <h4>Open / Close</h4>
+        <ul class="options">
+          <li>
+            <input type="text" id="triggerIndex" class="k-textbox"/>
+            <button k-button click.delegate="triggerItem()">Open/Close</button>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </div>
 </template>
