--- a/sample/src/samples/menu/context-menu.html
+++ b/sample/src/samples/menu/context-menu.html
@@ -1,2 +1,66 @@
 <template>
+  <require from="./context-menu.css"></require>
+  <div id="example">
+    <div class="demo-section k-content wide">
+      <h4>WebMail</h4>
+      <k-list-view k-data-source.bind="dataSource" id="listview-context-menu">
+        <k-template>
+          <div class="product">
+            <img src="http://demos.telerik.com/kendo-ui/content/shared/images/employees/${FromID}.png" alt="${From}" />
+
+            <h3>${Title}</h3>
+            <p class="date">${Date}</p>
+            <p>${From}</p>
+          </div>
+        </k-template>
+      </k-list-view>
+    </div>
+
+    <div class="box">
+      <h4>Orientation Settings</h4>
+      <ul class="options">
+        <li>
+          <label for="orientation">orientation</label>
+          <k-drop-down-list k-value.two-way="orientation">
+            <select id="orientation" name="orientation">
+              <option value="horizontal">Horizontal</option>
+              <option value="vertical">Vertical</option>
+            </select>
+          </k-drop-down-list>
+        </li>
+      </ul>
+      <br />
+      <button k-button click.delegate="apply()" style="width: 80px;">Apply</button>
+    </div>
+
+
+    <ul id="menu"
+        k-contextmenu="k-orientation.two-way: orientation; k-target: #listview-context-menu; k-filter: .product; k-animation.bind: animation;"
+        k-contextmenu.ref="contextVM">
+      <li>
+        <img src="http://demos.telerik.com/kendo-ui/content/web/toolbar/reply.png" /> Reply
+        <ul>
+          <li><img src="http://demos.telerik.com/kendo-ui/content/web/toolbar/reply.png" /> Reply to Sender</li>
+          <li><img src="http://demos.telerik.com/kendo-ui/content/web/toolbar/reply.png" /> Reply to All</li>
+        </ul>
+      </li>
+      <li class="k-separator"></li>
+      <li>
+        <img src="http://demos.telerik.com/kendo-ui/content/web/toolbar/forward.png" />  Forward
+      </li>
+      <li class="k-separator"></li>
+      <li>
+        Label
+        <ul>
+          <li>None</li>
+          <li class="k-separator"></li>
+          <li><img src="http://demos.telerik.com/kendo-ui/content/web/toolbar/important.png" />Important</li>
+          <li><img src="http://demos.telerik.com/kendo-ui/content/web/toolbar/todo.png" />Work</li>
+          <li><img src="http://demos.telerik.com/kendo-ui/content/web/toolbar/done.png" />Personal</li>
+          <li class="k-separator"></li>
+          <li>New Label</li>
+        </ul>
+      </li>
+    </ul>
+  </div>
 </template>
