--- a/sample/src/project-status/controls.html
+++ b/sample/src/project-status/controls.html
@@ -54,12 +54,14 @@
                    <img src="images/blue.png">
                    <a href="#/samples/grid">Grid</a>                         <br>
                    <a>Spreadsheet</a>                                        <br>
-                   <a>Listview</a>                                           <br>
+                   <img src="images/blue.png">
+                   <a href="#/samples/listview">Listview</a>                 <br>
                    <img src="images/blue.png">
                    <a href="#/samples/pivotgrid">Pivot Grid</a>              <br>
                    <img src="images/blue.png">
                    <a href="#/samples/treelist">TreeList</a>                 <br>
-                   <a>ScrollView</a>                                         <br>
+                   <img src="images/blue.png">
+                   <a href="#/samples/scrollview">ScrollView</a>             <br>
                    <br>
                    EDITORS                                                   <br>
                    <img src="images/blue.png">
@@ -88,6 +90,8 @@
                    <a href="#/samples/timepicker">TimePicker</a>             <br>
                    <img src="images/blue.png">
                    <a href="#/samples/upload">Upload</a>                     <br>
+                   <img src="images/blue.png">
+                   <a href="#/samples/validator">Validator</a>               <br>
                    <img src="images/blue.png">
                    <a href="#/samples/switch">Switch</a>                     <br>
               </div>
@@ -169,7 +173,8 @@
                   NAVIGATION                                                 <br>
                   <img src="images/blue.png">
                   <a href="#/samples/button">Button</a>                      <br>
-                  <a>ButtonGroup</a>                                         <br>
+                  <img src="images/blue.png">
+                  <a href="#/samples/buttongroup">ButtonGroup</a>            <br>
                   <img src="images/orange.png">
                   <a href="#">Menu</a>                                       <br>
                   <img src="images/blue.png">
@@ -184,10 +189,10 @@
                   INTERACTIVITY &amp; UX                                     <br>
                   <img src="images/blue.png">
                   <a href="#/samples/drag-and-drop">Drag &amp; Drop</a>      <br>
-                  <a>Effects</a>                                             <br>
                   <img src="images/blue.png">
                   <a href="#/samples/progressbar">ProgressBar</a>            <br>
-                  <a>Sortable</a>                                            <br>
+                  <img src="images/blue.png">
+                  <a href="#/samples/sortable">Sortable</a>                  <br>
                </div>
            </div>
 
